--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
             La lloreria 😭😢😭
         </title>
     </head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/fontawesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/solid.min.css">
     <body>
         <div id="superior">
             La lloreria 😭😢😭
@@ -26,6 +28,10 @@
             Secció 4 🤢🤕🤬
         </div>
         <div id="menu">
+            <i id="boto_1" class="fa-solid fa-house"></i>
+            <i id="boto_2" class="fa-solid fa-camera"></i>
+            <i id="boto_3" class="fa-solid fa-image"></i>
+            <i id="boto_4" class="fa-solid fa-map"></i>
+            <i class="fa-solid fa-right-from-bracket"></i>
         </div>
-    </body>
 </html>
