--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             La lloreria 😭😢😭
         </div>
         <div id="seccio_1" class="seccio">
-            Secció 1 😂🤣😥
+            La lloreria, el lugar donde cualqiera, si, CUALQUIERA puede llorar, y desaogarse. Este lugar ha sido fundado por Iborra Company. 😂🤣😥
         </div>
         <div id="seccio_2" class="seccio">
             Secció 2 😪😫🥱
