--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             La lloreria 😭😢😭
         </div>
         <div id="seccio_1" class="seccio">
-            La lloreria, el lugar donde cualqiera, si, CUALQUIERA puede llorar, y desaogarse. Este lugar ha sido fundado por Iborra Company. 😂🤣😥
+            La lloreria, el lugar donde cualqiera, si, CUALQUIERA puede llorar, y desaogarse.
         </div>
         <div id="seccio_2" class="seccio">
             Secció 2 😪😫🥱
@@ -28,10 +28,10 @@
             Secció 4 🤢🤕🤬
         </div>
         <div id="menu">
-            <i id="boto_1" class="fa-solid fa-house"></i>
-            <i id="boto_2" class="fa-solid fa-camera"></i>
-            <i id="boto_3" class="fa-solid fa-image"></i>
-            <i id="boto_4" class="fa-solid fa-map"></i>
+            <i id="boto_1" class="fa-solid fa-face-sad-cry"></i>
+            <i id="boto_2" class="fa-solid fa-hippo"></i>
+            <i id="boto_3" class="fa-solid fa-face-sad-tear"></i>
+            <i id="boto_4" class="fa-solid fa-face-grin-tears"></i>
             <i class="fa-solid fa-right-from-bracket"></i>
         </div>
 </html>
