--- a/index.html
+++ b/index.html
@@ -15,8 +15,27 @@
         <div id="superior">
             La lloreria 😭😢😭
         </div>
+        <div id="seccio_0" class="seccio">
+          <div>
+            Inici de sessió    
+          </div> 
+          <div id="credencials">    
+            <div>
+              <label for="nom_usuari">Nom d'usuari</label>
+              <input type="text" id="nom_usuari">
+            </div>
+            <div>
+              <label for="contrasenya">Contrasenya</label>        
+              <input type="password" id="contrasenya">
+            </div>
+          </div>
+          <div id="botons_sessio">    
+            <button>Inicia sessió</button>
+            <button>Nou usuari</button>
+          </div>         
+        </div>
         <div id="seccio_1" class="seccio">
-            La lloreria, el lugar donde cualqiera, si, CUALQUIERA puede llorar, y desaogarse.
+            Secció 1 😂🤣😥
         </div>
         <div id="seccio_2" class="seccio">
             Secció 2 😪😫🥱
@@ -34,4 +53,5 @@
             <i id="boto_4" class="fa-solid fa-face-grin-tears"></i>
             <i class="fa-solid fa-right-from-bracket"></i>
         </div>
+    </body>
 </html>
