--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
           </div>
         </div>
         <div id="seccio_4" class="seccio">
-          <img src="https://c0.klipartz.com/pngpicture/479/573/gratis-png-nino-llorando-escritorio-del-nino-nino-thumbnail.png"
+        </div>
+        <div id="seccio_5" class="seccio">
+          <img src="https://imageproxyb.ifunny.co/crop:x-20,resize:640x,quality:90x75/images/a18db8667e06b198ba73ecb3827439c1b2af4ba2cd774af62070a54ae757fcf5_1.jpg" width="flex", height="555">
         </div>
         <div id="menu">
             <i id="boto_1" class="fa-solid fa-house"></i>
