--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
       <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>  
+    <script src="index.js"></script>
         <link rel="stylesheet" href="index.css">
         <meta charset="UTF-8">    <!-- codificació del text (UTF-8) -->
         <meta name="viewport" content="width=device-width, initial-scale=1">    <!-- adapta la visualització a les mides de la pantalla -->
@@ -32,8 +33,8 @@
             </div>
           </div>
           <div id="botons_sessio">    
-            <button>Inicia sessió</button>
-            <button>Nou usuari</button>
+            <button onclick="inici_sessio()">Inicia sessió</button>
+            <button onclick="nou_usuari()">Nou usuari</button>
           </div>         
         </div>
         <div id="seccio_1" class="seccio">
@@ -70,11 +71,11 @@
           <img src="https://imageproxyb.ifunny.co/crop:x-20,resize:640x,quality:90x75/images/a18db8667e06b198ba73ecb3827439c1b2af4ba2cd774af62070a54ae757fcf5_1.jpg" width="flex", height="555">
         </div>
         <div id="menu">
-            <i id="boto_1" class="fa-solid fa-house"></i>
-            <i id="boto_2" class="fa-solid fa-camera"></i>
-            <i id="boto_3" class="fa-solid fa-image"></i>
-            <i id="boto_4" class="fa-solid fa-map"></i>
-            <i class="fa-solid fa-right-from-bracket"></i>
+            <i id="boto_1" class="fa-solid fa-house"  onclick="canvia_seccio(1)"></i>
+            <i id="boto_2" class="fa-solid fa-camera" onclick="canvia_seccio(2)"></i>     
+            <i id="boto_3" class="fa-solid fa-image" onclick="canvia_seccio(3)"></i>     
+            <i id="boto_4" class="fa-solid fa-map" onclick="canvia_seccio(4)"></i>     
+            <i class="fa-solid fa-right-from-bracket" onclick="tanca_sessio()"></i>     
         </div>
     </body>
 </html>
