--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           </div>         
         </div>
         <div id="seccio_1" class="seccio">
+          Benvinguts!
         </div>
         <div id="seccio_2" class="seccio">
           <div id="div_foto">    <!-- contenidor de la vista prèvia de la foto feta -->
