--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <i id="boto_2" class="fa-solid fa-camera" onclick="canvia_seccio(2)"></i>     
             <i id="boto_3" class="fa-solid fa-image" onclick="canvia_seccio(3)"></i>     
             <i id="boto_4" class="fa-solid fa-map" onclick="canvia_seccio(4)"></i>     
+            <i id="boto_5" class="fa-solid fa-bomb" onclick="canvia_seccio(5)"></i>  
             <i class="fa-solid fa-right-from-bracket" onclick="tanca_sessio()"></i>     
         </div>
     </body>
