--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div id="seccio_4" class="seccio">
         </div>
         <div id="seccio_5" class="seccio">
-          <img src="https://imageproxyb.ifunny.co/crop:x-20,resize:640x,quality:90x75/images/a18db8667e06b198ba73ecb3827439c1b2af4ba2cd774af62070a54ae757fcf5_1.jpg" width="flex", height="555">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTUchHwwANghUSfM7Vbr14ct24VFCkPS5atiA&usqp=CAU" width="flex", height="555">
         </div>
         <div id="menu">
             <i id="boto_1" class="fa-solid fa-house"  onclick="canvia_seccio(1)"></i>
