--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
         <div id="seccio_4" class="seccio">
         </div>
         <div id="seccio_5" class="seccio">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/0QPj7WaxQ8Q?si=OPteG8-wWuZbTy0o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="flex" height="flex" src="https://www.youtube.com/embed/0QPj7WaxQ8Q?si=OPteG8-wWuZbTy0o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="flex" height="flex" src="https://www.youtube.com/embed/BhpZHESuLp8?si=FReYYeFy8rwr7-U2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <div id="menu">
             <i id="boto_1" class="fa-solid fa-house"  onclick="canvia_seccio(1)"></i>
