--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
           </div>         
         </div>
         <div id="seccio_1" class="seccio">
-          Benvinguts!
           <img src="https://media1.tenor.com/m/DMOe6uRxAjIAAAAC/sad-cry.gif">
         </div>
         <div id="seccio_2" class="seccio">
@@ -72,7 +71,7 @@
         <div id="seccio_4" class="seccio">
         </div>
         <div id="seccio_5" class="seccio">
-          <iframe width="950" height="flex" src="https://www.youtube.com/embed/wAMZ6KpMGQI?si=yQvwXhc3cHqk8B9d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="960" height="flex" src="https://www.youtube.com/embed/9uxUwuPLHCI?si=aSOEdudLq476nKD6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <div id="menu">
             <i id="boto_1" class="fa-solid fa-house"  onclick="canvia_seccio(1)"></i>
