--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         </div>
         <div id="seccio_1" class="seccio">
           <img src="https://media1.tenor.com/m/DMOe6uRxAjIAAAAC/sad-cry.gif">
+                  Benvinguts a la ''lloreria''!
         </div>
         <div id="seccio_2" class="seccio">
           <div id="div_foto">    <!-- contenidor de la vista prèvia de la foto feta -->
