--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
         <div id="seccio_5" class="seccio">
           <iframe width="960" height="flex" src="https://www.youtube.com/embed/9uxUwuPLHCI?si=aSOEdudLq476nKD6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
+        <div id="seccio_6" class="seccio">
+          <iframe src="https://www.retrogames.cc/embed/40784-crash-bandicoot.html" width="600" height="450" frameborder="no" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" scrolling="no"></iframe>
+        </div>
         <div id="menu">
             <i id="boto_1" class="fa-solid fa-house"  onclick="canvia_seccio(1)"></i>
             <i id="boto_2" class="fa-solid fa-camera" onclick="canvia_seccio(2)"></i>     
