--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
         </div>
         <div id="seccio_6" class="seccio">
           <iframe src="https://www.retrogames.cc/embed/40784-crash-bandicoot.html" width="600" height="450" frameborder="no" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" scrolling="no"></iframe>
+          <iframe src="https://www.retrogames.cc/embed/40238-tekken-3.html" width="600" height="450" frameborder="no" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" scrolling="no"></iframe>
+          <iframe src="https://www.retrogames.cc/embed/22638-super-street-fighter-ii-the-new-challengers-europe.html" width="600" height="450" frameborder="no" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" scrolling="no"></iframe>
+          <iframe src="https://www.retrogames.cc/embed/9157-metal-slug-super-vehicle-001.html" width="600" height="450" frameborder="no" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" scrolling="no"></iframe>
         </div>
         <div id="menu">
             <i id="boto_1" class="fa-solid fa-house"  onclick="canvia_seccio(1)"></i>
